syntax = "proto3";

package playhouse.benchmark;

option csharp_namespace = "PlayHouse.Benchmark.Shared.Proto";

// ============================================
// Authentication Messages
// ============================================

// 인증 요청
message AuthenticateRequest {
    string client_version = 1;    // 클라이언트 버전 (선택)
}

// 인증 응답
message AuthenticateReply {
    bool success = 1;             // 인증 성공 여부
    string account_id = 2;        // 할당된 계정 ID
}
